# test_project

./: pyproject.toml  readme.md  requirements.txt
src/: .env  main.py  tables.py
test_project/src/: .env  bot_openai.db  gpt_functions.py  main.py  tables.py
